<resources>
    <string name="app_name">Recipe App</string>
    <string name="loginScreenLoginText">Login</string>
    <string name="loginScreenEmailText">EMAIL</string>
    <string name="loginScreenPasswordText">PASSWORD</string>
    <string name="loginScreenEmailHintText">bestchef@email.com</string>
    <string name="loginScreenPasswordHintText">Password</string>
    <string name="loginScreenForgotPasswordText">Forgot Password?</string>
    <string name="loginScreenSignUpText">Sign Up</string>
    <string name="previousPageDescriptionText">Previous Page</string>
    <string name="createAccountText">Create Account</string>
    <string name="usernameHintText">Username</string>
    <string name="confirmPasswordText">CONFIRM PASSSWORD</string>
    <string name="recipeNamePlaceholderText">Chicken Permission</string>
    <string name="recipeImageDescription">Recipe Image</string>
    <string name="ingredientsText">Ingredients</string>
    <string name="instructionsText">Instructions</string>
    <string name="ingredientsPlaceholderText">Ingredient Goes Here...</string>
    <string name="instructionsPlaceholderText">Instructions Go Here...</string>
    <string name="recipeCreatorPlaceholderText">Recipe By BestChef</string>
    <string name="editRecipeText">Edit Recipe</string>
    <string name="recipeSearchText">Search Recipes</string>
    <string name="feedNavigationText">Feed</string>
    <string name="newRecipeText">Create New Recipe</string>
    <string name="profileText">Profile</string>
    <string name="addImageText">Add Image</string>
    <string name="itemPlaceholderText">Ingredient/Instruction...</string>
    <string name="itemPositionPlaceholderText">1.</string>
    <string name="creatorPromptText">Creator:</string>
    <string name="creatorNamePlaceholderText">bestchef</string>
    <string name="addIngredientText">Add Ingredient</string>
    <string name="enterInformationText">Enter item...</string>
    <string name="saveItem">Save Item</string>
    <string name="namePromptText">Recipe Name:</string>
    <string name="submitRecipeText">Complete</string>
    <string name="noRecipeText">No Recipes to Display</string>
    <string name="recipeCountPlaceholder">Recipes: 0</string>
    <string name="editProfileText">Edit Profile</string>
    <string name="logoutPlaceholderText">Logout</string>
    <string name="followerCountPlaceholder">Followers: 0</string>
    <string name="followUserText">Follow</string>
    <string name="downloadRecipeText">Download</string>
    <string name="deleteRecipeText">Delete Recipe</string>
</resources>