<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RecipeActivity">

    <TextView
        android:id="@+id/recipeActivityNameTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:text="@string/recipeNamePlaceholderText"
        android:textSize="24sp"
        android:textColor="@color/white"
        android:padding="8dp"
        android:gravity="center"
        android:background="@color/loginGradientEndColor"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/recipeActivityNameTextView"
        android:layout_above="@id/recipeActivityNavBar">

        <!-- Full Recipe is Contained Here -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <ImageView
                android:id="@+id/recipeActivityImageView"
                android:adjustViewBounds="true"
                android:cropToPadding="true"
                android:scaleType="fitXY"
                android:src="@drawable/default_recipe_image"
                android:contentDescription="@string/recipeImageDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"/>

            <TextView
                android:id="@+id/recipeActivityRecipeCreatorTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/recipeCreatorPlaceholderText"
                android:gravity="center"
                android:textSize="18sp"
                android:layout_marginTop="8dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"/>

            <Button
                android:id="@+id/recipeActivityEditButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/transparent_button"
                android:text="@string/editRecipeText"
                android:gravity="center"
                android:textSize="18sp"
                android:textColor="@color/loginGradientEndColor"
                android:layout_marginTop="8dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"/>

            <View
                style="@style/Divider"
                android:layout_marginTop="8dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ingredientsText"
                android:textSize="24sp"
                android:layout_marginTop="8dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"/>

            <TextView
                android:id="@+id/recipeActivityIngredientsTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ingredientsPlaceholderText"
                android:textSize="18sp"
                android:layout_marginTop="8dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"/>

            <View
                style="@style/Divider"
                android:layout_marginTop="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/instructionsText"
                android:textSize="24sp"
                android:layout_marginTop="8dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"/>

            <TextView
                android:id="@+id/recipeActivityInstructionsTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/instructionsPlaceholderText"
                android:textSize="18sp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"/>

        </LinearLayout>

    </ScrollView>

    <!-- Bottom Navigation Bar -->

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/recipeActivityNavBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/loginGradientEndColor"
        app:itemIconTint="@color/white"
        android:layout_alignParentBottom="true"
        app:labelVisibilityMode="unlabeled"
        app:menu="@menu/navigation_items"/>


</RelativeLayout>