<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_bg"
    tools:context=".CreateAccount">

    <ImageButton
        android:id="@+id/createAccountReturnImageButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:scaleX="1.5"
        android:scaleY="1.2"
        android:minHeight="50dp"
        android:minWidth="50dp"
        android:src="@drawable/ic_baseline_arrow_back_24"
        android:background="@android:color/transparent"
        app:tint="@color/loginGradientEndColor"
        android:contentDescription="@string/previousPageDescriptionText"/>


    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/createAccountActivityChefImageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:minHeight="104dp"
        android:minWidth="104dp"
        android:padding="4dp"
        app:contentPadding="16dp"
        android:src="@drawable/chef_login_icon"
        android:background="@color/white"
        app:shapeAppearanceOverlay="@style/roundedImageViewRounded"
        app:strokeColor="@color/loginGradientCenterColor"
        app:strokeWidth="2dp"/>

    <TextView
        android:id="@+id/createAccountActivityCreateAccountTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/createAccountActivityChefImageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="4dp"
        android:text="@string/createAccountText"
        android:textSize="34sp"
        android:textColor="@color/white"
        android:fontFamily="sans-serif" />

    <TextView
        android:id="@+id/createAccountActivityEmailTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/createAccountActivityCreateAccountTextView"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="48dp"
        android:layout_marginTop="8dp"
        android:text="@string/loginScreenEmailText"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="@color/loginGradientEndColor"
        android:fontFamily="sans-serif" />

    <EditText
        android:id="@+id/createAccountActivityEmailEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/createAccountActivityEmailTextView"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="48dp"
        android:layout_marginTop="4dp"
        android:minWidth="300dp"
        android:minHeight="50dp"
        android:hint="@string/loginScreenEmailHintText"
        android:inputType="textEmailAddress"
        android:autofillHints="emailAddress"/>

    <TextView
        android:id="@+id/createAccountActivityUsernameTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/createAccountActivityEmailEditText"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="48dp"
        android:layout_marginTop="8dp"
        android:text="@string/usernameHintText"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textAllCaps="true"
        android:textColor="@color/loginGradientEndColor"
        android:fontFamily="sans-serif" />

    <EditText
        android:id="@+id/createAccountActivityUsernameEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/createAccountActivityUsernameTextView"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="48dp"
        android:layout_marginTop="4dp"
        android:minWidth="300dp"
        android:minHeight="50dp"
        android:hint="@string/usernameHintText"
        android:inputType="textEmailAddress"
        android:autofillHints="emailAddress"/>

    <TextView
        android:id="@+id/createAccountActivityPasswordTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/createAccountActivityUsernameEditText"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="48dp"
        android:layout_marginTop="8dp"
        android:text="@string/loginScreenPasswordText"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="@color/loginGradientEndColor"
        android:fontFamily="sans-serif" />

    <EditText
        android:id="@+id/createAccountActivityPasswordEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/createAccountActivityPasswordTextView"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="48dp"
        android:layout_marginTop="4dp"
        android:minWidth="300dp"
        android:minHeight="50dp"
        android:hint="@string/loginScreenPasswordHintText"
        android:inputType="textPassword"
        android:autofillHints="emailAddress"/>

    <TextView
        android:id="@+id/createAccountActivityConfirmPasswordTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/createAccountActivityPasswordEditText"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="48dp"
        android:layout_marginTop="8dp"
        android:text="@string/confirmPasswordText"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="@color/loginGradientEndColor"
        android:fontFamily="sans-serif" />

    <EditText
        android:id="@+id/createAccountActivityConfirmPasswordEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/createAccountActivityConfirmPasswordTextView"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="48dp"
        android:layout_marginTop="4dp"
        android:minWidth="300dp"
        android:minHeight="50dp"
        android:hint="@string/loginScreenPasswordHintText"
        android:inputType="textPassword"
        android:autofillHints="emailAddress"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/createAccountActivityCreateAccountButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/createAccountActivityConfirmPasswordEditText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="16dp"
        android:minWidth="320dp"
        app:cornerRadius="24dp"
        android:backgroundTint="@color/loginGradientEndColor"
        android:text="@string/createAccountText"
        android:textSize="24sp"
        android:padding="8dp"
        android:textColor="@color/gradientCenterColor"/>



</androidx.constraintlayout.widget.ConstraintLayout>